# Filter_Generator

./: .gitignore  README.md  active_base.ipynb  active_base.py  cascade_test.ipynb  idea.py  node_testing.ipynb  pyproject.toml  quick_all_rule_expansion.py  quick_spiral.py  rule_engine.py  subcircuit_generator (2).ipynb  subcircuit_generator.ipynb  test_2.ipynb
archive/: active_base.py  all_candidates.txt  node_testing.ipynb  subcircuit_generator.ipynb  test_2.ipynb
src/filter_generator/: __init__.py  __main__.py  circuits.py  cli.py  constants.py  design.py  graph.py  pipeline.py  rules.py
src/filter_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
